[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Multiplayer/Multiplayer.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Chakra_Petch/ChakraPetch-Medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Send" type="Button" parent="Panel"]
margin_left = 84.0
margin_top = 385.0
margin_right = 410.0
margin_bottom = 482.0
custom_fonts/font = SubResource( 1 )
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Client" type="Button" parent="Panel"]
margin_left = 86.0
margin_top = 243.0
margin_right = 412.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 1 )
text = "Client"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Panel"]
margin_left = 82.0
margin_top = 92.0
margin_right = 408.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 1 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Panel"]
margin_left = 1036.0
margin_top = 146.0
margin_right = 1644.0
margin_bottom = 792.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/Send" to="." method="_on_Send_pressed"]
[connection signal="pressed" from="Panel/Client" to="." method="_on_Client_pressed"]
[connection signal="pressed" from="Panel/Host" to="." method="_on_Host_pressed"]
